# courses-platform

./: .env.example  .gitignore  Caddyfile  HANDOFF_STAGES_PLAN.md  NDQS Design System_ Kompletna Specyfikacja Wizualna i UI_UX  PRD.md  QA_FINDINGS.md  SHADOW_COURSE_PLAN.md  STACK_GUIDELINES.md  STATUS.md  TECH_STACK.md  docker-compose.prod.yml  docker-compose.yml  lead-course-quests-open-questions.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_courses_enrollments.py  003_create_quests_artifacts.py  004_create_submissions_comms_log.py
backend/app/: config.py  database.py  logging.py  main.py  middleware.py  rate_limit.py  redis.py
backend/app/auth/: api_keys.py  dependencies.py  jwt.py  models.py  oauth.py  router.py
backend/app/courses/: models.py  router.py  schemas.py
backend/app/evaluation/: deterministic.py  llm_service.py  models.py  openrouter_client.py  orchestrator.py  router.py  schemas.py
backend/app/quests/: models.py  router.py  schemas.py  state_machine.py
backend/app/stats/: router.py
backend/courses/shadow/: AGENTS.md  CLAUDE.md  README.md  sentinel_prompt.md
backend/scripts/: seed_dev.py  seed_shadow_course.py
backend/tests/: test_api_keys.py  test_auth.py  test_courses.py  test_courses_security.py  test_csrf.py  test_database.py  test_docker.py  test_docker_compose.py  test_env_example.py  test_error_hardening.py  test_evaluation.py  test_health.py  test_input_validation.py  test_logout_blacklist.py  test_oauth.py  test_quests.py  test_rate_limiting.py  test_secrets_validation.py  test_security_access.py  test_security_headers.py  test_structlog.py  test_token_security.py
design-system/ndqs-platform/: MASTER.md
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  README.md  RUNBOOK.md  SECURITY.md
docs-init/: NDQS_ Kompletny Przewodnik Techniczny.md  Narrative-Driven Quest Sandbox (NDQS)  Rozszerzenie NDQS_ Multi-Course & Starter Packs
docs/validation/: feedback-template.md  pentest-checklist.md  shadow-walkthrough-prompt.md
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/comms/: page.tsx
frontend/src/app/(dashboard)/inventory/: page.tsx
frontend/src/app/(dashboard)/my-courses/: page.tsx
frontend/src/app/(dashboard)/profile/: page.tsx
frontend/src/app/(dashboard)/quest-map/: page.tsx
frontend/src/app/admin/: layout.tsx
frontend/src/app/admin/analytics/: page.tsx
frontend/src/app/admin/courses/: page.tsx
frontend/src/app/admin/quests/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/missions/: layout.tsx  page.tsx
frontend/src/app/missions/[courseId]/: page.tsx
frontend/src/app/quest/[questId]/: page.tsx
frontend/src/components/: AuroraBackground.tsx  CourseCover.tsx  CourseIntroModal.tsx  GlassCard.tsx  ShimmerSkeleton.tsx  Sidebar.tsx  SidebarProvider.tsx  TopBar.tsx
frontend/src/components/inventory/: ArtifactCard.tsx
frontend/src/components/quest-map/: QuestDetailPanel.tsx  QuestEdge.tsx  QuestNode.tsx  layout.ts
frontend/src/components/ui/: Button.tsx  Input.tsx  SegmentedProgressBar.tsx  StatusBadge.tsx  index.ts
frontend/src/hooks/: useTypewriter.ts
frontend/src/lib/: api-client.ts  auth.ts  dev-auth.ts  motion.tsx  use-api.ts
frontend/src/test/: auth.test.ts  evaluation.test.ts  integration.test.ts  missions.test.ts  quest-map.test.ts  scaffold.test.ts  stats.test.ts
frontend/src/types/: index.ts
