[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "ndqs-backend"
version = "0.1.0"
description = "NDQS Platform — Narrative-Driven Quest Sandbox backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.7.0",
    "passlib[bcrypt]>=1.7.0",
    "httpx>=0.27.0",
    "structlog>=24.0.0",
    "slowapi>=0.1.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4",
    "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF",
    "SIM", "TID", "TCH", "ARG", "ERA", "PL", "TRY", "FLY",
    "PERF", "RUF",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S107", "ARG", "PLC0415", "PLR2004", "E501"]
"app/auth/router.py" = ["B008", "S106"]
"app/config.py" = ["S105"]
"app/auth/jwt.py" = ["S105", "S107"]
"app/auth/dependencies.py" = ["S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
